--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<main>
-		<div class="nav">
+		<nav>
 			<a href="">
 				<svg width="23" height="15" viewBox="0 0 23 15" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M2.29077 7.38935L8.69077 0.989349M2.29077 7.38935L8.69077 13.7893M2.29077 7.38935H22.2908" stroke="#EAF0FF" stroke-width="2"/>
@@ -21,7 +21,7 @@
 					<path d="M24.8907 4.98934L11.2907 4.98934M11.2907 4.98934C11.2907 3.22203 9.85806 1.78934 8.09075 1.78934C6.32344 1.78934 4.89075 3.22203 4.89075 4.98934M11.2907 4.98934C11.2907 6.75665 9.85806 8.18934 8.09075 8.18934C6.32344 8.18934 4.89075 6.75665 4.89075 4.98934M4.89075 4.98934L0.890747 4.98934M24.8907 17.7893L20.8907 17.7893M20.8907 17.7893C20.8907 16.022 19.4581 14.5893 17.6907 14.5893C15.9234 14.5893 14.4907 16.022 14.4907 17.7893M20.8907 17.7893C20.8907 19.5566 19.4581 20.9893 17.6907 20.9893C15.9234 20.9893 14.4907 19.5566 14.4907 17.7893M14.4907 17.7893L0.890747 17.7893" stroke="#EAF0FF" stroke-width="2"/>
 				</svg>
 			</a>
-		</div>
+		</nav>
 		<div class="main-window">
 			<div class="player">
 				<h1>Liked songs</h1>
@@ -130,19 +130,19 @@
 
 
 	<div class="main-song player-hidden">
-		<div class="nav">
-			<a href="" id="visBtn">
+		<nav>
+			<button id="visBtn">
 				<svg width="23" height="15" viewBox="0 0 23 15" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M2.29077 7.38935L8.69077 0.989349M2.29077 7.38935L8.69077 13.7893M2.29077 7.38935H22.2908" stroke="#EAF0FF" stroke-width="2"/>
 				</svg>
-			</a>
+			</button>
 			<h1>Playing Now</h1>
 			<a href="" style="opacity: 0;">
 				<svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M24.8907 4.98934L11.2907 4.98934M11.2907 4.98934C11.2907 3.22203 9.85806 1.78934 8.09075 1.78934C6.32344 1.78934 4.89075 3.22203 4.89075 4.98934M11.2907 4.98934C11.2907 6.75665 9.85806 8.18934 8.09075 8.18934C6.32344 8.18934 4.89075 6.75665 4.89075 4.98934M4.89075 4.98934L0.890747 4.98934M24.8907 17.7893L20.8907 17.7893M20.8907 17.7893C20.8907 16.022 19.4581 14.5893 17.6907 14.5893C15.9234 14.5893 14.4907 16.022 14.4907 17.7893M20.8907 17.7893C20.8907 19.5566 19.4581 20.9893 17.6907 20.9893C15.9234 20.9893 14.4907 19.5566 14.4907 17.7893M14.4907 17.7893L0.890747 17.7893" stroke="#EAF0FF" stroke-width="2"/>
 				</svg>
 			</a>
-		</div>
+		</nav>
 		<div class="main-window">
 			<div class="song-player-cover">
 				<div class="song-player-cover-img">
